tests/baselines/reference/incorrectClassOverloadChain(strict=true).errors.txt
incorrectClassOverloadChain.ts(3,5): error TS2391: Function implementation is missing or not immediately following the declaration.
incorrectClassOverloadChain.ts(3,9): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== incorrectClassOverloadChain.ts (2 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        x = 1;
    }